# simpler-input

./: Cargo.toml  README.md
src/: lib.rs
