[package]
name = "easy-input"
version = "0.1.0"
repository = "https://github.com/Tarnest/easy-input"
authors = ["Tristan <tristanconnolly1@gmail.com>"]
description = "A simple way of receiving input from a user"
keywords = ["easy", "input", "easy_input", "readline", "read_line"]
readme = "README.md"
edition = "2018"
license = "MIT OR Apache-2.0"
exclude = [
	".gitignore"
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]