[package]
name = "simpler-input"
version = "0.2.0"
repository = "https://github.com/Tarnest/simpler-input"
authors = ["Tristan <tristanconnolly1@gmail.com>"]
description = "A simpler way of receiving input from a user"
keywords = ["simple", "input", "simpler_input", "readline", "read_line"]
readme = "README.md"
edition = "2018"
license = "MIT OR Apache-2.0"
exclude = [
	".gitignore"
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]